--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,4 +8,9 @@
 }
 @import 'blocks/promo';
 @import 'blocks/header';
-@import 'blocks/buttons.scss'
+@import 'blocks/buttons.scss';
+@import 'blocks/advantages';
+@import 'blocks/media';
+@import 'blocks/consultation';
+@import 'blocks/titles';
+@import 'blocks/forms';
