--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,20 +1,25 @@
 .button{
-    width: 150px;
-    height: 30px;
-    border-radius: 5px;
-    background-color: $main-color;
-    border: none;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 19px;
-    text-transform: uppercase;
-    color: #ffff;
-    margin-top: 4px;
-    &__main{
-        margin-top: 68px;
-        width: 300px;
-        height: 50px;
-        font-size: 16px;
+	width: 150px;
+	height: 30px;
+	border-radius: 5px;
+	background-color: $main-color;
+	border: none;
+	font-weight: 500;
+	font-size: 12px;
+	line-height: 19px;
+	text-transform: uppercase;
+	color: #ffff;
+	margin-top: 4px;
+	&__main{
+		margin-top: 68px;
+		width: 300px;
+		height: 50px;
+		font-size: 16px;
+	}
+	&__submit{
+		width: 100%;
+		height: 58px;
+		font-size: 16px;
 
  }
 }
