--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -5,6 +5,10 @@
         position: relative;
         width: 750px;
         margin: 0 auto;
+        // img{
+        //     width: 33%;
+        // }
+
     }
     .slick-prev{
         position: absolute;
