--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,13 +1,14 @@
 .carousel{
     background: #fff;
-    padding: 81px 0;
+    padding:  0;
     &__inner{
         position: relative;
-        width: 750px;
-        margin: 0 auto;
-        // img{
-        //     width: 33%;
-        // }
+        max-width: 750px;
+        margin: 149px auto;
+        img{
+            margin: 0 auto;
+            width: 100%;
+        }
 
     }
     .slick-prev{
