--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,9 +10,10 @@
 @import 'blocks/header';
 @import 'blocks/buttons.scss';
 @import 'blocks/advantages';
-@import 'blocks/media';
 @import 'blocks/consultation';
 @import 'blocks/titles';
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/rewiews';
+@import 'blocks/media';
