--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,4 +16,6 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/rewiews';
+@import 'blocks/footer';
+@import 'blocks/modal';
 @import 'blocks/media';
