--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,4 +9,14 @@
         line-height: 30px;
         color: #FFFFFF;
         }
+        .error{
+            border: 2px solid red;
+        }
+        label.error{
+            border: none;
+            text-align: center;
+            margin-bottom: 10px;
+            color: #FFFFFF;
+        
+        }
 }
