--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables';
+@import'base/animations';
 *{
 	font-family: 'MuseoSansCyrl', sans-serif;
 }
@@ -18,4 +19,5 @@
 @import 'blocks/rewiews';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
 @import 'blocks/media';
